--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "date-fns": "^2.23.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.1",
     "rxjs": "~6.6.0",
     "swiper": "^8.4.3",
@@ -38,6 +39,7 @@
     "@angular-eslint/template-parser": "12.3.1",
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
