ruteo, switchmap, template sin url

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "my-store-api",
+  "name": "my-store-router",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start:proxy": "ng serve --proxy-config ./proxy.config.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -20,13 +19,10 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.2",
     "date-fns": "^2.23.0",
     "file-saver": "^2.0.5",
-    "jquery": "^3.6.1",
     "rxjs": "~6.6.0",
-    "swiper": "^8.4.3",
+    "swiper": "^6.8.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -39,7 +35,7 @@
     "@angular-eslint/template-parser": "12.3.1",
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
-    "@types/file-saver": "^2.0.5",
+    "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
